--- a/content/docs/api/oauth2/oauth2-summary.mdx
+++ b/content/docs/api/oauth2/oauth2-summary.mdx
@@ -232,7 +232,7 @@ The OAuth2 API enables you to configure and manage social login integrations wit
     "clientSecret": "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",
     "clientAuthenticationMethod": "BASIC",
     "authorizationGrantType": "authorization_code",
-    "redirectUriTemplate": "{baseUrl}/oauth2/callback/{registrationId}",
+    "redirectUriTemplate": "&#123;baseUrl&#125;/oauth2/callback/&#123;registrationId&#125;",
     "scope": ["openid", "profile", "email", "address", "phone"],
     "authorizationUri": "https://accounts.google.com/o/oauth2/v2/auth",
     "tokenUri": "https://www.googleapis.com/oauth2/v4/token",
