--- a/content/docs/api/registration/resend-verification-code.mdx
+++ b/content/docs/api/registration/resend-verification-code.mdx
@@ -91,7 +91,7 @@ mutation {
   <div className="rounded-lg border border-red-500/30 bg-gradient-to-br from-red-500/10 to-rose-500/5 p-6">
     <div className="flex items-center gap-3 mb-2">
       <span className="text-2xl">❌</span>
-      <code className="bg-red-500/20 text-red-700 dark:text-red-300 px-3 py-1 rounded font-mono text-sm">Cannot find user by {email}</code>
+      <code className="bg-red-500/20 text-red-700 dark:text-red-300 px-3 py-1 rounded font-mono text-sm">Cannot find user by &#123;email&#125;</code>
     </div>
     <p className="text-sm text-foreground">
       Email address is not registered in the system. User should complete the signup process first.
