--- a/content/docs/api/registration/verify-account.mdx
+++ b/content/docs/api/registration/verify-account.mdx
@@ -101,7 +101,7 @@ mutation {
       <code className="bg-amber-500/20 text-amber-700 dark:text-amber-300 px-3 py-1 rounded font-mono text-sm">Cannot find user</code>
     </div>
     <p className="text-sm text-foreground">
-      Email not registered. Exception thrown with message: "Cannot find user by {email}"
+      Email not registered. Exception thrown with message: "Cannot find user by &#123;email&#125;"
     </p>
   </div>
 </div>
